Perbaikan dokumentasi swagger RemoveMediaRequest
