# src/docs/swagger_output.json
@@ -231,12 +231,12 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schema/RemoveMediaRequest"
+                "$ref": "#/components/schemas/RemoveMediaRequest"
               }
             },
             "application/xml": {
               "schema": {
-                "$ref": "#/components/schema/RemoveMediaRequest"
+                "$ref": "#/components/schemas/RemoveMediaRequest"
               }
             }
           }
